# xmlp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  jsonpgen.cpp  lexer.cpp  makefile  xmlgtest.cpp  xmlp.code-workspace  xmlpgen.cpp  xmlpgen.h  xmlpgen_utf16.cpp  xmlpgen_utf32.cpp  xmlpgen_utf8.cpp  xmlpgtest.h  xmlpgtest_cursorcopy.cpp  xmlpgtest_direct.cpp  xmlpgtest_doccopy.cpp  xmltestsame.cpp
unittests/: reed.xml  simple.xml  unittest1.xml  unittest2.xml  unittest3.xml  unittest4.xml  unittest4_skip.xml  unittest5.xml  unittest5_skip.xml
